--- a/src/scss/components/_page-nav.scss
+++ b/src/scss/components/_page-nav.scss
@@ -147,16 +147,10 @@
     font-size: $typescale-2;
     font-weight: $font-weight-semibold;
     line-height: $line-height-4;
-
-    &:hover {
-      font-weight: $font-weight-bold;
-      color: $sky;
-      text-decoration: none;
-    }
   }
 }
 
-.page-nav__link--active {
+.page-nav__list .page-nav__link--active {
+  font-weight: $font-weight-bold;
   color: $sky;
-  font-weight: $font-weight-semibold;
 }
