--- a/src/scss/components/_paragraphs.scss
+++ b/src/scss/components/_paragraphs.scss
@@ -41,14 +41,6 @@
 
 .paragraphs {
   margin-bottom: $spacing-7;
-
-  @include breakpoint(md) {
-    margin-bottom: $spacing-8;
-  }
-
-  @include breakpoint(lg) {
-    margin-bottom: $spacing-9;
-  }
 }
 
 .paragraphs--wide {
@@ -62,6 +54,10 @@
   @include breakpoint(lg){
     @include make-col(8);
     @include make-col-offset(2);
+  }
+
+  > :last-child {
+    margin-bottom: 0;
   }
 }
 
@@ -173,15 +169,11 @@
 .paragraph--quote {
   @extend %paragraph-full-width;
   margin-top: $spacing-4;
-  margin-bottom: $spacing-7;
-
-  @include breakpoint(md) {
-    margin-bottom: $spacing-6;
-  }
+  margin-bottom: $spacing-4;
 
   @include breakpoint(lg) {
     margin-top: $spacing-5;
-    margin-bottom: $spacing-7;
+    margin-bottom: $spacing-5;
   }
 }
 
